--- a/index.html
+++ b/index.html
@@ -153,10 +153,42 @@
         );
       })();
     </script>
-    <script
+   
+<body>
+<div class="container mt-5">
+<h2 class="text-center mb-4">Моё Портфолио</h2>
+<!-- Кнопки фильтров-->
+<div class="text-center mb-4">
+<div class="btn-group" role="group">
+<!-- TODO: Создайте 4 кнопки с классами btn btn-outline-primary-->
+<button class="btn btn-outline-primary" onclick="filterGallery('all')">Все</button>
+<button class="btn btn-outline-primary" onclick="filterGallery('all')">Веб-дизайн</button>
+<button class="btn btn-outline-primary" onclick="filterGallery('all')">Фотография</button>
+<button class="btn btn-outline-primary" onclick="filterGallery('all')">Графика</button>
+</div>
+</div>      
+<div class="row g-3" id="gallery">
+ <!-- Карточка 1 - Веб-дизайн -->
+ <div class="col-6 col-md-4 gallery-item" data-category="web">
+ <div class="card h-100">
+ <img src="https://placeholder.apptor.studio/400/300/website.png"
+ class="card-img-top" alt="Веб-проект">
+ <div class="card-body p-2">
+ <h6 class="card-title mb-0">Корпоративный сайт</h6>
+ <small class="text-muted">Веб-дизайн</small>
+ </div>
+ </div>
+ </div>
+ <!-- TODO: Скопируйте блок выше и создайте ещё 5 карточек -->
+ <!-- Категории: web, photo, photo, graphic, web, graphic -->
+ <!-- Измените изображения и названия -->
+</div>        
+<!-- Здесь будет галерея-->
+</div>
+</body>
+ <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
       crossorigin="anonymous"
     ></script>
-  </body>
 </html>
